fixed overflow issue with maintable, you can no scroll all the way to the bottom of the page

--- a/src/touchpoint-ui/Components/Display/MainTable.css
+++ b/src/touchpoint-ui/Components/Display/MainTable.css
@@ -14,12 +14,6 @@
 	height: 100%;
 	position: relative;
 	width: 100%;
-	overflow-y: hidden;
-	padding-bottom: 10px;
-}
-
-.MainTable .internalPadding{
-	height: 75vh;
 }
 
 .MainTable.noTransition *{
